--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
-  "name": "mkstack",
+  "name": "pc20-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "A starter template for building Podcasting 2.0 applications with modern web technologies",
+  "keywords": [
+    "podcasting",
+    "pc20",
+    "podcast-index",
+    "rss",
+    "audio",
+    "react",
+    "typescript"
+  ],
   "scripts": {
     "dev": "npm i && vite",
     "build": "npm i && vite build && cp dist/index.html dist/404.html",
@@ -43,6 +53,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@unhead/addons": "^2.0.10",
     "@unhead/react": "^2.0.10",
+    "@xmldom/xmldom": "^0.9.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -59,6 +70,7 @@
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
+    "rss-parser": "^3.13.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
